header search btn styling and visibility fix
header search btn styling and visibility fix
depending on breakpoints.

--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -181,7 +181,7 @@
   padding: 15px 0;
   max-height: 100px;
 
-  @media (min-width: $breakpoint-lg) {
+  @media (min-width: 992px) {
     display: block;
   }
 }
