--- a/scss/components/_service_cards_2.scss
+++ b/scss/components/_service_cards_2.scss
@@ -5,12 +5,12 @@
     background: $inverse-color;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 20px;
+    padding: 15px;
     text-align: center;
     transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    width: 100%;
 
     &:hover {
         transform: scale(1.05);
